# SoftwareOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testMath.cpp  testMatrix.cpp
app/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  image.cpp  image.h  model.cpp  model.h
common/: base.h
math/: math.h  matrix.h  vector.h
opengl/: CMakeLists.txt  clipper.cpp  clipper.h  data.h  frameBuffer.cpp  frameBuffer.h  gl.h  raster.cpp  raster.h  render.cpp  render.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
opengl/shader/: defaultShader.cpp  defaultShader.h  lightShader.cpp  lightShader.h  shader.cpp  shader.h  textureShader.cpp  textureShader.h
